# quantcast-interview-task

./: .gitignore  Makefile  Planning.md  README.md  example-cookies.csv  pyproject.toml
most_active_cookie/: __main__.py  main.py  parse_cookies.py
most_active_cookie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: cookie_log_malformed.csv  integration_tests.py  unit_tests.py
